--- a/corpus_preparation/tests/introduction-snippet.html
+++ b/corpus_preparation/tests/introduction-snippet.html
@@ -41,7 +41,43 @@
                 échantillon représentatif d’affaires rendues ou encore en instance sur des questions climatiques très
                 variées : demande indemnitaire de « victimes climatiques », contestation du manque d’ambition climatique
                 des États ou du non-respect des trajectoires de réduction des gaz à effet de serre (GES), demande de
-                désinvestissements dans les énergies fossiles, poursuites d’activistes du climat, etc.</p>
+                désinvestissements dans les énergies fossiles, poursuites d’activistes du climat, etc.
+            </p>
+            <h1 class="texte">
+                <strong>1. Sélectionner pour mieux cerner</strong>
+            </h1>
+            <p class="texte"><span class="paranumber" title="4"> </span>Le premier défi à relever a été celui de la
+                sélection des affaires au regard de la masse de procès en instance ou clos. Selon une première<a
+                    class="footnotecall" id="bodyftn9" href="#ftn9">9</a>
+            </p>
+            <p class="texte">
+                <span class="paranumber" title="5"></span>
+                La sélection des affaires au regard de la masse de procès en instance ou clos. Selon une première
+                <a class="footnotecall" id="bodyftn9" href="#ftn9">9</a>
+            </p>
+            <h1 class="texte">
+                <strong>2. Contextualiser</strong>
+            </h1>
+            <p class="texte">
+                <span class="paranumber" title="6"></span>
+                fqskdfsdfqm
+            </p>
+            <h1 class="texte">
+                <strong>3. Nuancer</strong>
+            </h1>
+            <p class="texte">
+                <span class="paranumber" title="7"></span>
+                aaaaaaaaaaa
+            </p>
+            <p class="titreillustration">Conceptualising climate litigation (Peel &amp; Osofsky).</p>
+            <p class="texte">
+                <img src="../images/img-1.png-750x750BQN78h.png" alt="image" />
+            </p>
+            <p class="texte">
+                <span class="paranumber" title="8"></span>
+                zzzzzzzzzzzzz
+            </p>
+
         </div>
 
         <div class="footnote">
@@ -49,7 +85,8 @@
             <p class="texte"><a class="FootnoteSymbol" href="#bodyftn1" id="ftn1">1</a> V. notamment le Commentaire
                 <em>Les « People’s Climate Case » c. Union européenne</em> (E. B<span
                     style="font-variant:small-caps;">rosset</span> et E. T<span
-                    style="font-variant:small-caps;">ruilhé</span>).</p>
+                    style="font-variant:small-caps;">ruilhé</span>).
+            </p>
             <p class="texte"><a class="FootnoteSymbol" href="#bodyftn2" id="ftn2">2</a> V. les deux commentaires de
                 l’affaire : Cour du District de La Haye, <em>Fondation Urgenda contre Pays-Bas</em> (A.-S. T<span
                     style="font-variant:small-caps;">abau </span>et C. C<span
@@ -58,7 +95,8 @@
             <p class="texte"><a class="FootnoteSymbol" href="#bodyftn3" id="ftn3">3</a> W. <span
                     style="font-variant:small-caps;">Kahl</span> et M.-P. <span
                     style="font-variant:small-caps;">Weller</span> (eds.), <em>Climate Change Litigation Liability and
-                    Damages from a Comparative Perspective</em>, à paraître en octobre 2020.</p>
+                    Damages from a Comparative Perspective</em>, à paraître en octobre 2020.
+            </p>
         </div>
         <div class="authors_description">
             <div class="section">Auteur</div>
